Fixed text align, and added hover color to anchor element

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,6 +25,16 @@
       max-width: 50%;
     }
   }
-  
 
+ a:hover {
+   color:blue;
+ } 
+  
+.textcenter
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 3px;
+}
   
